<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">QDLink</string>
    <string name="btn_qqmusic_syncmusic">Synchronous QQ music</string>
    <string name="btnnoupdate">Not Upgraded</string>
    <string name="btnsure">Sure</string>
    <string name="btnupdate">Upgrade</string>
    <string name="car_upgrade_detail">Have you detected the car upgrade package for you, is it updated?</string>
    <string name="carupdatelinkapp">Car upgrade package</string>
    <string name="checknewversion">Check the new version</string>
    <string name="chuansongchenggong">The car package was successfully delivered</string>
    <string name="chuansongshibai">The car package failed to transmit</string>
    <string name="chuansongzhong">The car package is being transmitted...</string>
    <string name="currentnotwifi">Currently no network</string>
    <string name="custom_dialog_button_cancel">Cancel</string>
    <string name="custom_dialog_button_confirm">Confirm</string>
    <string name="custom_dialog_text_loading">Loading...</string>
    <string name="dialog_detail_close">Closing method: Settings -> Developer Options -> Close USB debugging -> Close Enhance Callback</string>
    <string name="dialog_detail_open">Opening method: set -> developer option -> open USB debuggingopen enhanced callback</string>
    <string name="errordownload">download failed</string>
    <string name="exit_next_time">Press again to exit QDrive</string>
    <string name="finishdownload">Download completed</string>
    <string name="hello_world">Hello world!</string>
    <string name="music_currentnoplaysong">There are no songs to play at the moment</string>
    <string name="music_currentplaymusic">Playlist</string>
    <string name="music_defoult_songer">QDrive singer</string>
    <string name="music_defoult_songname">QDrive music</string>
    <string name="music_hint_songorname">Singer/Song</string>
    <string name="music_hot_label">Hot Tags</string>
    <string name="music_listentomylikesong">Listen to the song I love</string>
    <string name="music_loadfaild">Failed to load, click reload</string>
    <string name="music_nodata">No Local Music</string>
    <string name="music_nosearch_songlist">No search for songs that can be played</string>
    <string name="music_online_fail">Network request failed, audio access exception</string>
    <string name="music_playall">Play all</string>
    <string name="music_qqmusicsyncplaylist">QQ music synchronization selection</string>
    <string name="music_racmmand">Editor recommendation</string>
    <string name="music_title_defoult">Title</string>
    <string name="music_title_localmusic">Local music</string>
    <string name="music_title_onlinerecommend">Network recommendation</string>
    <string name="music_title_qqmusic">QQ music</string>
    <string name="music_unknown">Unknown</string>
    <string name="music_web_music">Network music</string>
    <string name="qqmusic_sync01">Please ensure that the music app has turned on the vehicle mode,</string>
    <string name="qqmusic_sync02">For the first time, click confirm connection</string>
    <string name="qqmusic_text_download">Please download or update QQ music, synchronize selected programs</string>
    <string name="qqmusic_text_download01">Please download or update</string>
    <string name="qqmusic_text_download02">QQ music</string>
    <string name="qqmusic_text_download03">，Simultaneous selection program</string>
    <string name="search_menu_title">Search</string>
    <string name="search_type01">Classic</string>
    <string name="search_type02">Ballad</string>
    <string name="search_type03">Rock</string>
    <string name="search_type04">Lyrical Jazz</string>
    <string name="search_type05">Popular</string>
    <string name="search_type06">Love song</string>
    <string name="search_type07">Korean</string>
    <string name="search_type08">Classic</string>
    <string name="search_type09">Store Music</string>
    <string name="search_type10">Sentimental</string>
    <string name="search_type11">Internet songs</string>
    <string name="search_type12">Light music</string>
    <string name="search_type13">England</string>
    <string name="search_type14">Classic</string>
    <string name="search_type15">Rock</string>
    <string name="searchmusic">Search</string>
    <string name="setting_list_name_control">Enhance Control</string>
    <string name="setting_list_name_version">Version</string>
    <string name="showadb">(Adb On)</string>
    <string name="showadbclose">(Adb Off)</string>
    <string name="showadblinkclose">Enhanced callback is off: effective after reconnection</string>
    <string name="showadblinkopen">Enhanced callback is enabled: effective after reconnection</string>
    <string name="startdownload">start download</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="text_app_add">Add</string>
    <string name="text_app_add_finish">Complete</string>
    <string name="text_empty"> </string>
    <string name="text_google_voice_uninstall">Please install Google Voice Assistant</string>
    <string name="text_hour">H</string>
    <string name="text_km">KM</string>
    <string name="text_loading">Loading…</string>
    <string name="text_m">M</string>
    <string name="text_minute">M</string>
    <string name="text_navigation_google_map">Google</string>
    <string name="text_navigation_here">Here</string>
    <string name="text_navigation_no_setup">Please install this app on your phone</string>
    <string name="text_navigation_waze">Waze</string>
    <string name="text_permission_cancel">Quit</string>
    <string name="text_permission_check_fail">Access permission failed</string>
    <string name="text_permission_confirm">Authorize</string>
    <string name="text_phone_add">Add</string>
    <string name="text_phone_add_contact">Click to add frequently used contacts</string>
    <string name="text_phone_calling">Calling</string>
    <string name="text_phone_ceiling_is_10">You can add up to 10 commonly used contacts！</string>
    <string name="text_phone_contacts">Address Book</string>
    <string name="text_phone_content_is_null">Content is empty</string>
    <string name="text_phone_edit">edit</string>
    <string name="text_phone_fix_similar_contact">A similar contact has been located for you</string>
    <string name="text_phone_foundnt">Not found</string>
    <string name="text_phone_frequent_contacts">Top contacts</string>
    <string name="text_phone_get_call_log_fail">Call record failed</string>
    <string name="text_phone_get_contacts_fail">Address book failed</string>
    <string name="text_phone_no_call_log">No Call History</string>
    <string name="text_phone_no_contacts">No Contacts</string>
    <string name="text_phone_no_frequent">There are no commonly used contacts</string>
    <string name="text_phone_number_is_error">Incorrect number</string>
    <string name="text_phone_number_is_null">The number is empty</string>
    <string name="text_phone_phone_label">Telephone</string>
    <string name="text_phone_reload">Loading again</string>
    <string name="text_phone_search_no_contacts">This contact was not found</string>
    <string name="text_phone_searching">Searching...</string>
    <string name="text_phone_searching_by_pinyin">Enquiring contacts, please wait</string>
    <string name="text_phone_setting_call_permission">Please set up the phone permissions in the system</string>
    <string name="text_phone_submit">Complete</string>
    <string name="text_search">Search</string>
    <string name="text_second">S</string>
    <string name="text_speak">Please speak</string>
    <string name="textcurrentdialog">Currently the latest version</string>
    <string name="textupdate01">Whether to upgrade to</string>
    <string name="textupdate02">Version?</string>
    <string name="textupdate03">New version size:</string>
    <string name="tv_wanning">Warning:</string>
    <string name="txt_control_close">Closed</string>
    <string name="txt_control_open">Open</string>
    <string name="unlink_next_time">Press again to disconnect</string>
    <string name="upgrade">Update</string>
    <string name="upgrade_cancel">Cancel</string>
    <string name="wanning_detail">"Updating the car machine
 Do not ignite, power off, shut down, etc.
Update will be completed after 30 seconds
 Please re-plug the phone after 30 seconds to use the internet function"</string>
    <string name="x_refresh_view_footer_hint_click">Click to load more</string>
    <string name="x_refresh_view_footer_hint_complete">No more data</string>
    <string name="x_refresh_view_footer_hint_fail">Loading failed, please try again</string>
    <string name="x_refresh_view_footer_hint_normal">Loading completed</string>
    <string name="x_refresh_view_footer_hint_ready">Release and load more</string>
    <string name="x_refresh_view_footer_hint_release">Release and load more</string>
    <string name="x_refresh_view_header_hint_loaded">Loading completed</string>
    <string name="x_refresh_view_header_hint_loaded_fail">Failed to load</string>
    <string name="x_refresh_view_header_hint_loading">Loading</string>
    <string name="x_refresh_view_header_hint_normal">Pull down to refresh</string>
    <string name="x_refresh_view_header_hint_ready">Release refresh data</string>
    <string name="x_refresh_view_header_hint_refreshing">Refreshing</string>
    <string name="x_refresh_view_header_last_time">Last update time:</string>
    <string name="x_refresh_view_never_refresh">Never refreshed</string>
    <string name="x_refresh_view_refresh_days_ago">Refresh before %1s day</string>
    <string name="x_refresh_view_refresh_hours_ago">Refresh before %1s hours</string>
    <string name="x_refresh_view_refresh_just_now">Just refreshed</string>
    <string name="x_refresh_view_refresh_minutes_ago">Refresh before %1s minutes</string>
</resources>
