<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/background_gray" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/layout_qqmusic_tile" android:background="@color/voice_help_background" android:layout_width="fill_parent" android:layout_height="@dimen/music_title_selected_onlineorlocal_width">
        <ImageView android:layout_gravity="center_vertical" android:id="@id/menu_back_info" android:padding="@dimen/mypadding18" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/back_btn" />
        <TextView android:textSize="@dimen/text_view_16" android:textColor="@color/white" android:id="@id/txt0000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/music_title_qqmusic" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/layout_qqmusic_sync" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/music_title_selected_onlineorlocal_width" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/layout_qqmusic_tile">
        <TextView android:textSize="@dimen/text_view_18" android:textColor="@color/white" android:id="@id/txt_qqmusic01" android:paddingTop="@dimen/mypadding83" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/mypadding83" android:text="@string/qqmusic_sync01" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
        <TextView android:textSize="@dimen/text_view_18" android:textColor="@color/white" android:id="@id/txt_qqmusic02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/mypadding10" android:text="@string/qqmusic_sync02" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/txt_qqmusic01" />
        <TextView android:textSize="@dimen/text_view_16" android:textColor="@color/white" android:id="@id/txt_qqmusic_sync" android:background="@drawable/common_btn_pressed_music" android:paddingLeft="@dimen/mypadding15" android:paddingTop="@dimen/mypadding5" android:paddingRight="@dimen/mypadding15" android:paddingBottom="@dimen/mypadding5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/mypadding16" android:text="@string/btn_qqmusic_syncmusic" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/txt_qqmusic02" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/layout_qqmusic_download" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/music_title_selected_onlineorlocal_width" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/layout_qqmusic_tile">
        <TextView android:textSize="@dimen/text_view_18" android:textColor="@color/white" android:id="@id/txt_qqmusic_download" android:padding="@dimen/mypadding8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/qqmusic_text_download" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>