<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/guideline_v" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.33" />
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/guideline_v_second" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.66" />
    <com.neusoft.qdrivelink.mapnavi.view.CustomNavigationAppView android:id="@id/cnav_google" android:layout_width="@dimen/length_zero" android:layout_height="@dimen/length_zero" app:icon="@mipmap/navi_btn_app" app:is_exist="false" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@id/guideline_v" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:name="@string/text_navigation_google_map" />
    <com.neusoft.qdrivelink.mapnavi.view.CustomNavigationAppView android:id="@id/cnav_waze" android:layout_width="@dimen/length_zero" android:layout_height="@dimen/length_zero" app:icon="@mipmap/navi_icon_waze" app:is_exist="false" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@id/guideline_v_second" app:layout_constraintStart_toStartOf="@id/guideline_v" app:layout_constraintTop_toTopOf="parent" app:name="@string/text_navigation_waze" />
    <com.neusoft.qdrivelink.mapnavi.view.CustomNavigationAppView android:id="@id/cnav_here" android:layout_width="@dimen/length_zero" android:layout_height="@dimen/length_zero" app:icon="@mipmap/navi_icon_here" app:is_exist="false" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="@id/guideline_v_second" app:layout_constraintTop_toTopOf="parent" app:name="@string/text_navigation_here" />
</androidx.constraintlayout.widget.ConstraintLayout>