<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/searchonlinemusic_frameLayout" android:background="@color/background_gray" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:background="@color/background_gray" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <RelativeLayout android:id="@id/rl_title" android:background="@color/voice_help_background" android:padding="@dimen/music_search_padding14" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RelativeLayout android:id="@id/btn_return_searchback" android:paddingLeft="@dimen/mypadding15" android:paddingTop="@dimen/mypadding10" android:paddingRight="@dimen/mypadding10" android:paddingBottom="@dimen/mypadding10" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <ImageView android:background="@drawable/return_view" android:focusable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </RelativeLayout>
            <Button android:textSize="@dimen/text_view_14" android:textColor="@color/white" android:id="@id/btn_search" android:background="@drawable/search_btn" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/mypadding20" android:text="@string/searchmusic" android:layout_alignBottom="@id/rl_nearbysearch" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            <RelativeLayout android:id="@id/rl_nearbysearch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/mypadding10" android:layout_toLeftOf="@id/btn_search" android:layout_toRightOf="@id/btn_return_searchback" android:layout_centerVertical="true">
                <ImageView android:id="@id/iv_searchglass" android:background="@mipmap/search_icon" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" />
                <ImageView android:id="@id/iv_nearbyportline" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/mypadding5" android:src="@mipmap/port_line_home" android:layout_toRightOf="@id/iv_searchglass" android:layout_centerVertical="true" />
                <AutoCompleteTextView android:textSize="@dimen/text_view_16" android:textColor="@color/white" android:id="@id/edit_songsearch" android:background="@drawable/background_corner_music_search" android:padding="@dimen/mypadding5" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/music_hint_songorname" android:singleLine="true" android:layout_toRightOf="@id/iv_nearbyportline" android:layout_centerVertical="true" android:inputType="textAutoComplete" android:imeOptions="actionSearch|flagNoFullscreen" android:textCursorDrawable="@color/transparent_color" />
                <ImageView android:id="@id/btn_land_delete" android:paddingLeft="@dimen/mypadding15" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/mypadding15" android:src="@drawable/land_search_delete" android:layout_alignRight="@id/edit_songsearch" android:layout_centerVertical="true" />
                <ImageButton android:id="@id/btn_speak" android:background="@null" android:paddingLeft="@dimen/mypadding15" android:paddingTop="@dimen/mypadding10" android:paddingRight="@dimen/mypadding15" android:paddingBottom="@dimen/mypadding10" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/mypadding10" android:src="@drawable/land_speak" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
        </RelativeLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/linearlayout001" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/mypadding44" android:layout_marginTop="@dimen/mypadding15">
            <RelativeLayout android:gravity="center" android:layout_width="@dimen/mypadding60" android:layout_height="fill_parent">
                <ImageView android:id="@id/iv_back" android:padding="@dimen/mypadding10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/return_view" />
            </RelativeLayout>
            <RelativeLayout android:layout_gravity="center_vertical" android:id="@id/rl_input" android:background="@drawable/background_corner_music_search" android:paddingTop="@dimen/mypadding6" android:paddingBottom="@dimen/mypadding6" android:layout_width="0.0dip" android:layout_height="@dimen/mypadding31" android:layout_weight="1.0">
                <EditText android:textColor="@color/white" android:textColorHint="@color/text_color_collect_item_sub_title" android:id="@id/edittext_searchsong" android:background="@drawable/background_corner_music_search" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/mypadding7" android:hint="@string/music_hint_songorname" android:cursorVisible="true" android:layout_centerVertical="true" android:inputType="number" android:imeOptions="flagNoExtractUi" android:textCursorDrawable="@drawable/qd_shape_gray_cur_conner_bg" />
                <ImageView android:id="@id/iv_clear" android:paddingLeft="@dimen/mypadding8" android:paddingRight="@dimen/mypadding8" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/land_search_delete" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
            <TextView android:textColor="@color/white" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/tv_search" android:background="@drawable/common_btn_pressed" android:visibility="invisible" android:layout_width="@dimen/mypadding62" android:layout_height="@dimen/mypadding31" android:layout_marginLeft="@dimen/mypadding7_5" android:layout_marginRight="@dimen/padding25" android:text="@string/searchmusic" />
        </LinearLayout>
        <RelativeLayout android:background="@color/background_gray" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/rl_title">
            <LinearLayout android:orientation="vertical" android:id="@id/linearlayout_nosearch" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/mypadding20" android:layout_marginTop="@dimen/mypadding13" android:layout_marginRight="@dimen/mypadding20">
                <TextView android:textColor="@color/switch_gray_track" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/music_hot_label" />
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/mypadding13">
                    <TextView android:textSize="@dimen/mypadding15" android:textColor="@color/switch_gray_track" android:gravity="center_horizontal" android:id="@id/txt_01" android:background="@drawable/background_corner_no_black" android:padding="@dimen/mypadding4" android:layout_width="@dimen/mypadding85" android:layout_height="@dimen/mypadding30" android:text="@string/search_type01" />
                    <TextView android:textSize="@dimen/mypadding15" android:textColor="@color/switch_gray_track" android:gravity="center_horizontal" android:id="@id/txt_02" android:background="@drawable/background_corner_no_black" android:padding="@dimen/mypadding4" android:layout_width="@dimen/mypadding85" android:layout_height="@dimen/mypadding30" android:layout_marginLeft="@dimen/mypadding22" android:text="@string/search_type02" />
                    <TextView android:textSize="@dimen/mypadding15" android:textColor="@color/switch_gray_track" android:gravity="center_horizontal" android:id="@id/txt_03" android:background="@drawable/background_corner_no_black" android:padding="@dimen/mypadding4" android:layout_width="@dimen/mypadding85" android:layout_height="@dimen/mypadding30" android:layout_marginLeft="@dimen/music_search_padding22" android:text="@string/search_type03" />
                    <TextView android:textSize="@dimen/margin15" android:textColor="@color/switch_gray_track" android:gravity="center_horizontal" android:id="@id/txt_04" android:background="@drawable/background_corner_no_black" android:padding="@dimen/mypadding4" android:layout_width="@dimen/mypadding85" android:layout_height="@dimen/mypadding30" android:layout_marginLeft="@dimen/music_search_padding22" android:text="@string/search_type04" />
                    <TextView android:textSize="@dimen/padding15" android:textColor="@color/switch_gray_track" android:gravity="center_horizontal" android:id="@id/txt_05" android:background="@drawable/background_corner_no_black" android:padding="@dimen/mypadding4" android:layout_width="@dimen/mypadding85" android:layout_height="@dimen/margin30" android:layout_marginLeft="@dimen/music_search_padding22" android:text="@string/search_type05" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:id="@id/linearlayout_onlinemusic" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/mypadding22_5" android:layout_marginTop="@dimen/music_search_padding14" android:layout_marginRight="@dimen/music_search_padding22" android:layout_below="@id/rel_title">
                <TextView android:textSize="@dimen/music_search_padding14" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/music_web_music" android:layout_centerVertical="true" />
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView android:id="@id/recyclerview_searchsong" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/mypadding20" android:layout_marginRight="@dimen/mypadding20" android:layout_below="@id/linearlayout_onlinemusic" />
        </RelativeLayout>
    </RelativeLayout>
</FrameLayout>