<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/black0b0b0b" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <TextView android:textSize="20.0sp" android:textColor="@color/unConnectedclickedBaseBlue" android:gravity="center" android:id="@id/tv_pushpackagestate" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/chuansongchenggong" android:singleLine="true" app:layout_constraintBottom_toTopOf="@id/progress_pushpackagetocar" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <ProgressBar android:layout_gravity="center" android:id="@id/progress_pushpackagetocar" android:background="@color/radio_white_gray" android:layout_width="300.0dip" android:layout_height="3.0dip" android:layout_marginTop="15.0dip" android:max="100" android:progress="0" android:progressDrawable="@drawable/progress_bg" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toTopOf="@id/tv_wanning" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_pushpackagestate" style="@android:style/Widget.ProgressBar.Horizontal" />
        <TextView android:textSize="18.0sp" android:textColor="@color/text_color_location_gray" android:id="@id/tv_wanning" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/tv_wanning" app:layout_constraintBottom_toTopOf="@id/tv_detail" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/progress_pushpackagetocar" />
        <TextView android:textSize="16.0sp" android:textColor="@color/text_color_location_gray" android:id="@id/tv_detail" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:text="@string/wanning_detail" android:lineSpacingExtra="4.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_wanning" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>